--- a/modern-todo/styles.css
+++ b/modern-todo/styles.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     transition: .25s all ease;
 }
 :root{
@@ -88,7 +88,6 @@ body{
 .search-wrapper{
     width: 100%;
     margin-top: 30px;
-    overflow: hidden;
     border-radius: 5px;
     display: flex;
 }
@@ -121,7 +120,7 @@ body{
 #search{
     min-height: 100%;
     width: 100%;
-    background: var(--bg-secondary);
+    /* background: var(--bg-secondary); */
 }
 #search input{
     border: none;
@@ -129,14 +128,15 @@ body{
     height: var(--height);
     width: 100%;
     font-size: var(--font-lg);
-    font-weight: 450;
+    font-weight: 300;
     padding: 0 1.35rem;
     background: var(--bg-secondary);
     color: var(--text-primary);
+    border-radius: 5px;
 }
 #search input::placeholder{
     color: var(--text-secondary);
-    font-weight: 450;
+    font-weight: 300;
 }
 .search-wrapper .checkbox img{
     display: none;
@@ -196,7 +196,7 @@ body{
     display: flex;
     align-items: center;
     font-size: var(--font-lg);
-    font-weight: 450;
+    font-weight: 300;
     color: var(--text-primary);
     padding: 0 1.5rem;
     background: var(--bg-secondary);
@@ -230,6 +230,7 @@ body{
     border: none;
     color: #fff;
     cursor: pointer;
+    box-shadow: 0 0 0 4px rgba(66, 133, 244,.25);
 }
 .todo-message p, .message-wrapper p{
     font-size: var(--font-lg);
@@ -265,7 +266,7 @@ body{
     color: var(--text-secondary);
     padding: .7rem;
     cursor: pointer;
-    font-weight: 450;
+    font-weight: 300er;
     font-size: var(--font-sm);
     display: flex;
     align-items: center;
@@ -383,6 +384,9 @@ button:active{
     width: 30%;
     cursor: pointer;
     color: var(--text-primary);
+}
+input:focus{
+    box-shadow: 0 0 0 4px rgba(66, 133, 244,.5);
 }
 @media (max-width: 1024px){
     :root{
