--- a/modern-todo/styles.css
+++ b/modern-todo/styles.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Oxygen', sans-serif;
     transition: .25s all ease;
 }
 :root{
@@ -263,7 +263,7 @@ body{
     border: none;
     outline: none;
     background: transparent;
-    color: var(--text-secondary);
+    color: var(--text-primary);
     padding: .7rem;
     cursor: pointer;
     font-weight: 300er;
@@ -288,16 +288,17 @@ button:active{
 }
 .nav-tabs{
     display: none;
-    gap: 0.5rem;
+    gap: 3.5rem;
+
 }
 .nav-active, .nav-active:hover{
     color: #4285f4;
-    background: rgba(66, 133, 244, .2);
+    /* background: rgba(66, 133, 244, .2); */
     border-radius: 5px;
 }
 .nav-tabs-res{
     width: var(--width);
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     box-shadow: 0 0 30px var(--shadow);
     background: var(--bg-secondary);
@@ -308,7 +309,8 @@ button:active{
     z-index: 3;
 }
 .nav-tabs-res .nav{
-    height: 75%;
+    height: 50%;
+    padding: 5px 15px;
 }
 .toggle-visibility{
     visibility: hidden;
@@ -370,7 +372,7 @@ button:active{
     flex: 5;
     padding: 1rem;
     flex-direction: column;
-    gap: 1.15rem;
+    gap: 1.65rem;
 }
 .details{
     font-size: var(--font-lg);
