--- a/modern-todo/styles.css
+++ b/modern-todo/styles.css
@@ -355,6 +355,9 @@ button:active{
 .success-modal{
     border-left: solid 3px rgba(0, 255, 0,1);
 }
+.warning-modal{
+    border-left: solid 3px orange;
+}
 .modal h1{
     color: var(--text-primary);
 }
@@ -372,6 +375,9 @@ button:active{
 .success-modal .icon{
     background:rgba(0, 255, 0,.1);
 }
+.warning-modal .icon{
+    background: rgba(255, 165, 0, .3);
+}
 .modal .icon i{
     font-size: 5rem;
     font-weight: 300;
@@ -381,6 +387,14 @@ button:active{
 }
 .success-modal i{
     color: rgba(0, 255, 0,.75);
+}
+.warning-modal i{
+    color: orange;
+}
+.buttons{
+    display: flex;
+    gap: 1rem;
+
 }
 .modal-desc{
     display: flex;
@@ -393,7 +407,7 @@ button:active{
     font-size: var(--font-lg);
     color: var(--text-secondary);
 }
-.close-popup{
+.close-popup, .btn-yes{
     border-radius: 5px;
     border: solid 1px var(--text-secondary);
     background-color: transparent;
@@ -401,6 +415,11 @@ button:active{
     width: 30%;
     cursor: pointer;
     color: var(--text-primary);
+}
+.btn-yes{
+    background-color: #4285f4;
+    border: none;
+    color: var(--primary);
 }
 input:focus{
     box-shadow: 0 0 0 4px rgba(66, 133, 244,.5);
