--- a/modern-todo/styles.css
+++ b/modern-todo/styles.css
@@ -438,7 +438,7 @@ input:focus{
         --bg: background-image: linear-gradient(60deg, #16a085 0%, #f4d03f 100%);
     }
     .header{
-        background-image: linear-gradient(to left, #b8cbb8 0%, #b8cbb8 0%, #b465da 0%, #cf6cc9 33%, #ee609c 66%, #ee609c 100%);
+        background-image: var(--bg);
     }
     .todo-items{
         max-height: 50vh;
