--- a/modern-todo/styles.css
+++ b/modern-todo/styles.css
@@ -432,10 +432,10 @@ input:focus{
         --font-sm: .7rem;
     }
     .light-mode{
-        --bg: background-image: linear-gradient(-60deg, #16a085 0%, #f4d03f 100%);
+        --bg: linear-gradient(-60deg, #16a085 0%, #f4d03f 100%);
     }
     .dark-mode{
-        --bg: background-image: linear-gradient(60deg, #16a085 0%, #f4d03f 100%);
+        --bg: linear-gradient(60deg, #16a085 0%, #f4d03f 100%);
     }
     .header{
         background-image: var(--bg);
