--- a/modern-todo/styles.css
+++ b/modern-todo/styles.css
@@ -337,6 +337,7 @@ button:active{
     top: 0;
     left: 0;
     background: rgba(0,0,0,.75);
+    backdrop-filter: blur(10px);
     z-index: 5;
     place-items: center;
     /* display: grid; */
