--- a/modern-todo/styles.css
+++ b/modern-todo/styles.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-family: 'Oxygen', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     transition: .25s all ease;
 }
 :root{
